methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:8: error: value avance is not a member of Unit
possible cause: maybe a semicolon is missing before `value avance'?
    }avance(5)
     ^MethodsPicture:9: error: value gauche is not a member of Unit
possible cause: maybe a semicolon is missing before `value gauche'?
  }gauche()
   ^