methods.picture.MethodsPicture.scala.code
override def run() {
  for (i<- 1 to 3) {
    for (i<- 1 to 4) {
      faireV(Color.YELLOW)
      faireV(Color.RED)
      faireV(Color.BLUE)
      faireV(Color.GREEN)
    }avance(5)
  }gauche()
  avance(5)
  droite()
  for (i<- 1 to 4) {
      faireV(Color.YELLOW)
      faireV(Color.RED)
      faireV(Color.BLUE)
      faireV(Color.GREEN)
  };droite()
  avance(5)
  droite()
}

def faireV(c: Color) {
  setCouleurBrosse(c)
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
  baisseBrosse()
  leveBrosse()
  recule()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  gauche()
  
  
}